# acept

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  imported_requirements.txt  imported_requirements_install_requires.txt  pyproject.toml  requirements.txt  requirements_all.txt  requirements_including_docs.txt  setup.cfg  setup.sh
data/bbd/TestBezirk/: Res_9565000_10_buildings.csv  Res_9565000_10_buildings.dbf  Res_9565000_10_buildings.shp  Res_9565000_10_buildings.shx
docs/: docs_requirements.txt
docs/source/: conf.py  contribute.rst  data_setup.rst  development_future_work.rst  index.rst  installation.rst  project_overview.rst  pylovo_gui.rst  uhp.rst  usage.rst
docs/source/_static/: custom.css
docs/source/_templates/autoapi/: index.rst
docs/source/auto_api_reference/: index.rst
docs/source/auto_api_reference/UrbanHeatPro/: index.rst
docs/source/auto_api_reference/UrbanHeatPro/Classes/: index.rst
docs/source/auto_api_reference/UrbanHeatPro/Classes/Building/: index.rst
docs/source/auto_api_reference/UrbanHeatPro/Classes/City/: index.rst
docs/source/auto_api_reference/UrbanHeatPro/Classes/HotWaterDemand/: index.rst
docs/source/auto_api_reference/UrbanHeatPro/Classes/HotWaterDemand_D/: index.rst
docs/source/auto_api_reference/UrbanHeatPro/Classes/Simulation/: index.rst
docs/source/auto_api_reference/UrbanHeatPro/Classes/SpaceHeatingDemand/: index.rst
docs/source/auto_api_reference/UrbanHeatPro/Functions/: index.rst
docs/source/auto_api_reference/UrbanHeatPro/Functions/plot/: index.rst
docs/source/auto_api_reference/UrbanHeatPro/Functions/probabilistic/: index.rst
docs/source/auto_api_reference/UrbanHeatPro/Functions/to_tuple/: index.rst
docs/source/auto_api_reference/UrbanHeatPro/Functions/uhp_utils/: index.rst
docs/source/auto_api_reference/UrbanHeatPro/run_uhp/: index.rst
docs/source/auto_api_reference/acept/: index.rst
docs/source/auto_api_reference/acept/acept_constants/: index.rst
docs/source/auto_api_reference/acept/acept_utils/: index.rst
docs/source/auto_api_reference/acept/bbd_plz_preprocessing/: index.rst
docs/source/auto_api_reference/acept/buildings_information/: index.rst
docs/source/auto_api_reference/acept/cop_profiles/: index.rst
docs/source/auto_api_reference/acept/demand_profiles/: index.rst
docs/source/auto_api_reference/acept/dwd_try_data_handling/: index.rst
docs/source/auto_api_reference/acept/dwd_try_data_setup/: index.rst
docs/source/auto_api_reference/acept/examples/: index.rst
docs/source/auto_api_reference/acept/examples/main_example/: index.rst
docs/source/auto_api_reference/acept/examples/pv_cap_example/: index.rst
docs/source/auto_api_reference/acept/exceptions/: index.rst
docs/source/auto_api_reference/acept/plz_shape/: index.rst
docs/source/auto_api_reference/acept/pv_cap_api/: index.rst
docs/source/auto_api_reference/acept/pv_cap_factor_profiles/: index.rst
docs/source/auto_api_reference/acept/temperature_profiles/: index.rst
docs/source/auto_api_reference/acept/uhp_csv_io/: index.rst
docs/source/auto_api_reference/acept/uhp_input_formatting/: index.rst
docs/source/auto_api_reference/acept/weather_profile_api/: index.rst
docs/source/file_trees/: acept_tree.rst  uhp_tree.rst
settings/: uhp_settings.yaml  uhp_settings_example.yaml
src/acept/: acept_constants.py  acept_utils.py  bbd_plz_preprocessing.py  buildings_information.py  cop_profiles.py  demand_profiles.py  dwd_try_data_handling.py  dwd_try_data_setup.py  exceptions.py  plz_shape.py  pv_cap_api.py  pv_cap_factor_profiles.py  temperature_profiles.py  uhp_csv_io.py  uhp_input_formatting.py  weather_profile_api.py
src/acept/acept_notebooks/: bbd_plz_processsing_examples.ipynb  building_information_example.ipynb  buildings_shapes_analytics.ipynb  demand_profiles_example.ipynb  dwd_try_data_performance_analytics.ipynb  plz_shape_data_analytics.ipynb  weather_profile_examples.ipynb
src/acept/examples/: __init__.py  main_example.py  pv_cap_example.py
