[metadata]
name = acept
version = 0.0.1
author = TUM ENS
author_email = vera.kowalczuk@tum.de
license = MIT License
description = Automated, communal energy planning tool
url =

[options]
package_dir =
     = src
packages = find:
setup_requires = Cython >= 0.28.5; numpy >= 1.15.0
install_requires =
     Cartopy>=0.22.0
     geopandas>=0.12.0
     gsee @ git+https://github.com/VeraKowalczuk/gsee.git@master
     netCDF4>=1.6.4
     numpy>=1.24.2
     pandas>=2.1.1
     psutil>=5.9.5
     ratelimit>=2.2.1
     Requests>=2.31.0
     rioxarray>=0.15.0
     Shapely>=2.0.1
     tqdm>=4.66.1
     xarray[io]>=2023.8.0



[options.packages.find]
where = src

[options.extras_require]
interactive = jupyter
docs =
     sphinx
     myst-parser
     sphinx_rtd_theme
all = interactive; docs