[metadata]
name = acept
version = 0.0.1
author = TUM ENS
author_email = vera.kowalczuk@tum.de
license = MIT License
description = Automated, communal energy planning tool
url = acept.readthedocs.io
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
     = src
packages = find:
setup_requires = Cython >= 0.28.5; numpy >= 1.15.0
python_requires = >=3.8
install_requires =
     Cartopy>=0.22.0
     geopandas>=0.12.0
     gsee @ git+https://github.com/VeraKowalczuk/gsee.git@master
     netCDF4>=1.6.4
     numpy>=1.24.2
     pandas>=2.1.1
     psutil>=5.9.5
     ratelimit>=2.2.1
     Requests>=2.31.0
     rioxarray>=0.15.0
     Shapely>=2.0.1
     tqdm>=4.66.1
     xarray[io]>=2023.8.0



[options.packages.find]
where = src

[options.extras_require]
interactive = jupyter
docs =
    sphinx>=6.1.3, <8
    myst-parser>=2.0.0, <3
    sphinx-rtd-theme>=2.0.0, <3
    sphinx-autodoc-typehints>=1.25.2, <2
    sphinx-autoapi>=3.0.0, <4
    sphinx-autobuild>=2021.3.14
    sphinx-design>=0.5.0, <1
all = interactive; docs